[gd_scene load_steps=2 format=3 uid="uid://d2ub0ygaehxxx"]

[ext_resource type="Script" path="res://Tests/statistics_comprehensive_test.gd" id="1_0r8c2"]

[node name="StatisticsComprehensiveTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0r8c2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Statistics System - Comprehensive Test Suite"
horizontal_alignment = 1

[node name="RunTestsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run All Tests"

[node name="ClearOutputButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear Output"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TestOutput" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Click 'Run All Tests' to begin comprehensive testing of the Statistics system..."